--- a/extentV5/ExtentReport.html
+++ b/extentV5/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">LiveGuru HTML Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 16, 2023 09:44:40 PM</span></a>
+<a href="#"><span class="badge badge-primary">May 17, 2023 09:26:47 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Order_01_Apply_Coupon-FIREFOX</p>
+            <p class="name">Product_01_Product_Price-FIREFOX</p>
             <p class="text-sm">
-              <span>9:44:40 PM</span> / <span>00:00:06:293</span>
+              <span>9:26:48 PM</span> / <span>00:00:04:540</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,15 +89,15 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Order_01_Apply_Coupon-FIREFOX</h5>
-<span class='badge badge-success'>05.16.2023 9:44:40 PM</span>
-<span class='badge badge-danger'>05.16.2023 9:44:47 PM</span>
-<span class='badge badge-default'>00:00:06:293</span>
+<h5 class="test-status text-pass">Product_01_Product_Price-FIREFOX</h5>
+<span class='badge badge-success'>05.17.2023 9:26:48 PM</span>
+<span class='badge badge-danger'>05.17.2023 9:26:52 PM</span>
+<span class='badge badge-default'>00:00:04:540</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
-<div class="m-t-10 m-l-5">Order_01_Apply_Coupon</div>
+<div class="m-t-10 m-l-5">Product_01_Product_Price</div>
 </div>
 </div><div class="detail-body mt-4">
 <table class="table table-sm">
@@ -105,28 +105,42 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:44:40 PM</td>
+        <td>9:26:48 PM</td>
         <td>
-          Order_01_Apply_Coupon - Step 01: Add product name 'Sony Xperia' to cart
+          Product_01_Product_Price - Step 01: Open mobile product list
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:44:44 PM</td>
+        <td>9:26:50 PM</td>
         <td>
-          Order_01_Apply_Coupon - Step 02: Apply coupon code value 'GURU50'
+          Product_01_Product_Price - Step 02: Get price of product name 'Sony Xperia' on Product list screen
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:44:46 PM</td>
+        <td>9:26:50 PM</td>
         <td>
-          Order_01_Apply_Coupon - Step 03: Verify if coupon code is applied
+          Product_01_Product_Price - Step 03: Open product detail page of product name 'Sony Xperia'
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:26:52 PM</td>
+        <td>
+          Product_01_Product_Price - Step 04: Open price of product name 'Sony Xperia' on Product detail screen
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:26:52 PM</td>
+        <td>
+          Product_01_Product_Price - Step 05: Verify if the price on product list screen is equal to the price on product detail screen
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:44:47 PM</td>
+        <td>9:26:52 PM</td>
         <td>
           Test passed
         </td>
@@ -141,9 +155,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Order_02_Edit_Qty-FIREFOX</p>
+            <p class="name">Product_02_Compare_Products-FIREFOX</p>
             <p class="text-sm">
-              <span>9:44:47 PM</span> / <span>00:00:03:227</span>
+              <span>9:26:52 PM</span> / <span>00:00:06:670</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -151,15 +165,15 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Order_02_Edit_Qty-FIREFOX</h5>
-<span class='badge badge-success'>05.16.2023 9:44:47 PM</span>
-<span class='badge badge-danger'>05.16.2023 9:44:50 PM</span>
-<span class='badge badge-default'>00:00:03:227</span>
+<h5 class="test-status text-pass">Product_02_Compare_Products-FIREFOX</h5>
+<span class='badge badge-success'>05.17.2023 9:26:52 PM</span>
+<span class='badge badge-danger'>05.17.2023 9:26:59 PM</span>
+<span class='badge badge-default'>00:00:06:670</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
-<div class="m-t-10 m-l-5">Order_02_Edit_Qty</div>
+<div class="m-t-10 m-l-5">Product_02_Compare_Products</div>
 </div>
 </div><div class="detail-body mt-4">
 <table class="table table-sm">
@@ -167,42 +181,63 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:44:47 PM</td>
+        <td>9:26:52 PM</td>
         <td>
-          Order_02_Edit_Qty - Step 01: Edit qty textbox with value '501'
+          Product_02_Compare_Products - Step 01: Back to mobile product list
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:44:47 PM</td>
+        <td>9:26:54 PM</td>
         <td>
-          Order_02_Edit_Qty - Step 02: Click button Update
+          Product_02_Compare_Products - Step 02: Add product name 'Sony Xperia' to compare list
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:44:48 PM</td>
+        <td>9:26:55 PM</td>
         <td>
-          Order_02_Edit_Qty - Step 03: Verify if error message is correct
+          Product_02_Compare_Products - Step 03: Verify if the product is added to list successfully
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:44:49 PM</td>
+        <td>9:26:55 PM</td>
         <td>
-          Order_02_Edit_Qty - Step 04: Click Empty cart link
+          Product_02_Compare_Products - Step 04: Add product name 'IPhone' to compare list
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:44:50 PM</td>
+        <td>9:26:56 PM</td>
         <td>
-          Order_02_Edit_Qty - Step 05: Verify if the shopping cart is empty
+          Product_02_Compare_Products - Step 05: Verify if the product is added to list successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:26:56 PM</td>
+        <td>
+          Product_02_Compare_Products - Step 06: Click Compare button
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:26:58 PM</td>
+        <td>
+          Product_02_Compare_Products - Step 07: Verify if the products are displayed on the comparison window
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>9:26:59 PM</td>
+        <td>
+          Product_02_Compare_Products - Step 08: Close popup window
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:44:50 PM</td>
+        <td>9:26:59 PM</td>
         <td>
           Test passed
         </td>
@@ -226,13 +261,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 16, 2023 09:44:40 PM</h3>
+<h3>May 17, 2023 09:26:47 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 16, 2023 09:44:50 PM</h3>
+<h3>May 17, 2023 09:27:01 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -283,10 +318,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='20%'><b>2</b> events passed</small></div>
+<div><small data-tooltip='13%'><b>2</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
-<b data-tooltip='%'>8</b> others
+<b data-tooltip='%'>13</b> others
 </small>
 </div>
 </div>
@@ -302,7 +337,7 @@
 </div></div>
 <script>
 var timeline = {
-"Order_01_Apply_Coupon-FIREFOX":6.293,"Order_02_Edit_Qty-FIREFOX":3.227
+"Product_01_Product_Price-FIREFOX":4.54,"Product_02_Compare_Products-FIREFOX":6.67
 };
 </script>
 <div class="row">
@@ -358,7 +393,7 @@ passEvents: 2,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 8
+infoEvents: 13
 };
 </script>        </div>
       </div>
