Add Liveguru admin function sort testcase

--- a/extentV5/ExtentReport.html
+++ b/extentV5/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">LiveGuru HTML Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 23, 2023 10:01:46 PM</span></a>
+<a href="#"><span class="badge badge-primary">May 24, 2023 09:55:50 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Order_01_Print_Invoices-CHROME</p>
+            <p class="name">Invoices_01_Sort-CHROME</p>
             <p class="text-sm">
-              <span>10:01:46 PM</span> / <span>00:01:08:802</span>
+              <span>9:55:50 PM</span> / <span>00:00:03:839</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,15 +89,15 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Order_01_Print_Invoices-CHROME</h5>
-<span class='badge badge-success'>05.23.2023 10:01:46 PM</span>
-<span class='badge badge-danger'>05.23.2023 10:02:55 PM</span>
-<span class='badge badge-default'>00:01:08:802</span>
+<h5 class="test-status text-pass">Invoices_01_Sort-CHROME</h5>
+<span class='badge badge-success'>05.24.2023 9:55:50 PM</span>
+<span class='badge badge-danger'>05.24.2023 9:55:54 PM</span>
+<span class='badge badge-default'>00:00:03:839</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
-<div class="m-t-10 m-l-5">Order_01_Print_Invoices</div>
+<div class="m-t-10 m-l-5">Invoices_01_Sort</div>
 </div>
 </div><div class="detail-body mt-4">
 <table class="table table-sm">
@@ -105,49 +105,35 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:01:46 PM</td>
+        <td>9:55:50 PM</td>
         <td>
-          Order_01_Print_Invoices - Step 01: Open order list page
+          Invoices_01_Sort - Step 01: Verify if the records are sorted asc by invoices no
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:01:48 PM</td>
+        <td>9:55:51 PM</td>
         <td>
-          Order_01_Print_Invoices - Step 02: Search record with status 'Canceled'
+          Invoices_01_Sort - Step 02: Verify if the records are sorted desc by invoices no
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:01:49 PM</td>
+        <td>9:55:52 PM</td>
         <td>
-          Order_01_Print_Invoices - Step 03: Print invoices with first record in the table
+          Invoices_01_Sort - Step 03: Verify if the records are sorted asc by invoices date
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:01:52 PM</td>
+        <td>9:55:53 PM</td>
         <td>
-          Order_01_Print_Invoices - Step 04: Verify message error
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>10:01:52 PM</td>
-        <td>
-          Order_01_Print_Invoices - Step 05: Search record with status 'Complete'
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>10:01:53 PM</td>
-        <td>
-          Order_01_Print_Invoices - Step 06: Print invoices with first record in the table
+          Invoices_01_Sort - Step 04: Verify if the records are sorted desc by invoices date
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:02:55 PM</td>
+        <td>9:55:54 PM</td>
         <td>
           Test passed
         </td>
@@ -171,13 +157,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 23, 2023 10:01:46 PM</h3>
+<h3>May 24, 2023 09:55:50 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 23, 2023 10:02:55 PM</h3>
+<h3>May 24, 2023 09:55:55 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -228,10 +214,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='14%'><b>1</b> events passed</small></div>
+<div><small data-tooltip='20%'><b>1</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
-<b data-tooltip='%'>6</b> others
+<b data-tooltip='%'>4</b> others
 </small>
 </div>
 </div>
@@ -247,7 +233,7 @@
 </div></div>
 <script>
 var timeline = {
-"Order_01_Print_Invoices-CHROME":68.802
+"Invoices_01_Sort-CHROME":3.839
 };
 </script>
 <div class="row">
@@ -303,7 +289,7 @@ passEvents: 1,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 6
+infoEvents: 4
 };
 </script>        </div>
       </div>
