--- a/extentV5/ExtentReport.html
+++ b/extentV5/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">LiveGuru HTML Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 24, 2023 09:55:50 PM</span></a>
+<a href="#"><span class="badge badge-primary">May 25, 2023 03:54:31 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Invoices_01_Sort-CHROME</p>
             <p class="text-sm">
-              <span>9:55:50 PM</span> / <span>00:00:03:839</span>
+              <span>3:54:32 PM</span> / <span>00:00:09:466</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Invoices_01_Sort-CHROME</h5>
-<span class='badge badge-success'>05.24.2023 9:55:50 PM</span>
-<span class='badge badge-danger'>05.24.2023 9:55:54 PM</span>
-<span class='badge badge-default'>00:00:03:839</span>
+<span class='badge badge-success'>05.25.2023 3:54:32 PM</span>
+<span class='badge badge-danger'>05.25.2023 3:54:42 PM</span>
+<span class='badge badge-default'>00:00:09:466</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -105,35 +105,91 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:55:50 PM</td>
+        <td>3:54:32 PM</td>
         <td>
           Invoices_01_Sort - Step 01: Verify if the records are sorted asc by invoices no
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:55:51 PM</td>
+        <td>3:54:34 PM</td>
         <td>
           Invoices_01_Sort - Step 02: Verify if the records are sorted desc by invoices no
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:55:52 PM</td>
+        <td>3:54:34 PM</td>
         <td>
           Invoices_01_Sort - Step 03: Verify if the records are sorted asc by invoices date
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:55:53 PM</td>
+        <td>3:54:35 PM</td>
         <td>
           Invoices_01_Sort - Step 04: Verify if the records are sorted desc by invoices date
         </td>
       </tr>
       <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>3:54:36 PM</td>
+        <td>
+          Invoices_01_Sort - Step 05: Verify if the records are sorted asc by order no
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>3:54:37 PM</td>
+        <td>
+          Invoices_01_Sort - Step 06: Verify if the records are sorted desc by order no
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>3:54:37 PM</td>
+        <td>
+          Invoices_01_Sort - Step 07: Verify if the records are sorted asc by order date
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>3:54:38 PM</td>
+        <td>
+          Invoices_01_Sort - Step 08: Verify if the records are sorted desc by order date
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>3:54:39 PM</td>
+        <td>
+          Invoices_01_Sort - Step 09: Verify if the records are sorted asc by Bill to Name
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>3:54:40 PM</td>
+        <td>
+          Invoices_01_Sort - Step 10: Verify if the records are sorted desc by Bill to Name
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>3:54:40 PM</td>
+        <td>
+          Invoices_01_Sort - Step 11: Verify if the records are sorted asc by Amount
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>3:54:41 PM</td>
+        <td>
+          Invoices_01_Sort - Step 10: Verify if the records are sorted desc by Amount
+        </td>
+      </tr>
+      <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:55:54 PM</td>
+        <td>3:54:42 PM</td>
         <td>
           Test passed
         </td>
@@ -157,13 +213,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 24, 2023 09:55:50 PM</h3>
+<h3>May 25, 2023 03:54:31 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 24, 2023 09:55:55 PM</h3>
+<h3>May 25, 2023 03:54:43 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -214,10 +270,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='20%'><b>1</b> events passed</small></div>
+<div><small data-tooltip='7%'><b>1</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
-<b data-tooltip='%'>4</b> others
+<b data-tooltip='%'>12</b> others
 </small>
 </div>
 </div>
@@ -233,7 +289,7 @@
 </div></div>
 <script>
 var timeline = {
-"Invoices_01_Sort-CHROME":3.839
+"Invoices_01_Sort-CHROME":9.466
 };
 </script>
 <div class="row">
@@ -257,7 +313,7 @@ var timeline = {
 </tr>
 <tr>
 <td>JDK version</td>
-<td>11.0.15</td>
+<td>17.0.6</td>
 </tr>
 </tbody>
 </table></div>
@@ -289,7 +345,7 @@ passEvents: 1,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 4
+infoEvents: 12
 };
 </script>        </div>
       </div>
