--- a/extentV5/ExtentReport.html
+++ b/extentV5/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">LiveGuru HTML Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 25, 2023 03:54:31 PM</span></a>
+<a href="#"><span class="badge badge-primary">May 25, 2023 09:54:44 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Invoices_01_Sort-CHROME</p>
+            <p class="name">Customer_01_Search-CHROME</p>
             <p class="text-sm">
-              <span>3:54:32 PM</span> / <span>00:00:09:466</span>
+              <span>9:54:44 PM</span> / <span>00:00:13:467</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,15 +89,15 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Invoices_01_Sort-CHROME</h5>
-<span class='badge badge-success'>05.25.2023 3:54:32 PM</span>
-<span class='badge badge-danger'>05.25.2023 3:54:42 PM</span>
-<span class='badge badge-default'>00:00:09:466</span>
+<h5 class="test-status text-pass">Customer_01_Search-CHROME</h5>
+<span class='badge badge-success'>05.25.2023 9:54:44 PM</span>
+<span class='badge badge-danger'>05.25.2023 9:54:58 PM</span>
+<span class='badge badge-default'>00:00:13:467</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
-<div class="m-t-10 m-l-5">Invoices_01_Sort</div>
+<div class="m-t-10 m-l-5">Customer_01_Search</div>
 </div>
 </div><div class="detail-body mt-4">
 <table class="table table-sm">
@@ -105,91 +105,56 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:32 PM</td>
+        <td>9:54:44 PM</td>
         <td>
-          Invoices_01_Sort - Step 01: Verify if the records are sorted asc by invoices no
+          Customer_01_Search - Step 01: Search with ID
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:34 PM</td>
+        <td>9:54:45 PM</td>
         <td>
-          Invoices_01_Sort - Step 02: Verify if the records are sorted desc by invoices no
+          Customer_01_Search - Step 02: Search with Name
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:34 PM</td>
+        <td>9:54:47 PM</td>
         <td>
-          Invoices_01_Sort - Step 03: Verify if the records are sorted asc by invoices date
+          Customer_01_Search - Step 03: Search with Email
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:35 PM</td>
+        <td>9:54:49 PM</td>
         <td>
-          Invoices_01_Sort - Step 04: Verify if the records are sorted desc by invoices date
+          Customer_01_Search - Step 04: Search with Telephone
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:36 PM</td>
+        <td>9:54:51 PM</td>
         <td>
-          Invoices_01_Sort - Step 05: Verify if the records are sorted asc by order no
+          Customer_01_Search - Step 05: Search with ZIP
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:37 PM</td>
+        <td>9:54:54 PM</td>
         <td>
-          Invoices_01_Sort - Step 06: Verify if the records are sorted desc by order no
+          Customer_01_Search - Step 06: Search with Country
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:37 PM</td>
+        <td>9:54:56 PM</td>
         <td>
-          Invoices_01_Sort - Step 07: Verify if the records are sorted asc by order date
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:38 PM</td>
-        <td>
-          Invoices_01_Sort - Step 08: Verify if the records are sorted desc by order date
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:39 PM</td>
-        <td>
-          Invoices_01_Sort - Step 09: Verify if the records are sorted asc by Bill to Name
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:40 PM</td>
-        <td>
-          Invoices_01_Sort - Step 10: Verify if the records are sorted desc by Bill to Name
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:40 PM</td>
-        <td>
-          Invoices_01_Sort - Step 11: Verify if the records are sorted asc by Amount
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>3:54:41 PM</td>
-        <td>
-          Invoices_01_Sort - Step 10: Verify if the records are sorted desc by Amount
+          Customer_01_Search - Step 07: Search with State
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:54:42 PM</td>
+        <td>9:54:58 PM</td>
         <td>
           Test passed
         </td>
@@ -213,13 +178,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 25, 2023 03:54:31 PM</h3>
+<h3>May 25, 2023 09:54:44 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 25, 2023 03:54:43 PM</h3>
+<h3>May 25, 2023 09:54:59 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -270,10 +235,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='7%'><b>1</b> events passed</small></div>
+<div><small data-tooltip='12%'><b>1</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
-<b data-tooltip='%'>12</b> others
+<b data-tooltip='%'>7</b> others
 </small>
 </div>
 </div>
@@ -289,7 +254,7 @@
 </div></div>
 <script>
 var timeline = {
-"Invoices_01_Sort-CHROME":9.466
+"Customer_01_Search-CHROME":13.467
 };
 </script>
 <div class="row">
@@ -313,7 +278,7 @@ var timeline = {
 </tr>
 <tr>
 <td>JDK version</td>
-<td>17.0.6</td>
+<td>11.0.15</td>
 </tr>
 </tbody>
 </table></div>
@@ -345,7 +310,7 @@ passEvents: 1,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 12
+infoEvents: 7
 };
 </script>        </div>
       </div>
